Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.0.30, 10.1.22
-
None
-
Ubuntu 16.04 amd64, GCC 5.4.0
Description
Changes to the my_sys.h header related to MDEV-11902 have broken certain build configurations that were working under 10.1.21 and earlier. We build using a specific minimum included set of features. This now causes a build failure on building:
Building C object strings/CMakeFiles/strings.dir/ctype-simple.c.o with the error message:
|
|
In file included from /src/mariadb/10.1.22/mariadb-10.1-10.1.22+maria/strings/ctype-simple.c:19:0:
|
/src/mariadb/10.1.22/mariadb-10.1-10.1.22+maria/include/my_sys.h:649:43: error: unknown type name 'PSI_file_key'
|
extern int my_handler_delete_with_symlink(PSI_file_key key, const char *name,
|
^
|
strings/CMakeFiles/strings.dir/build.make:374: recipe for target 'strings/CMakeFiles/strings.dir/ctype-simple.c.o' failed
|
make[2]: *** [strings/CMakeFiles/strings.dir/ctype-simple.c.o] Error 1
|
CMakeFiles/Makefile2:3431: recipe for target 'strings/CMakeFiles/strings.dir/all' failed
|
make[1]: *** [strings/CMakeFiles/strings.dir/all] Error 2
|
Makefile:160: recipe for target 'all' failed
|
make: *** [all] Error 2
|
The CMake command used to configure for building:
cmake -DPLUGIN_LOCALES:STRING="NO" -DPLUGIN_SEMISYNC_MASTER:STRING="NO" -DPLUGIN_FEDERATED:STRING="NO" -DCONNECT_WITH_XMAP:BOOL="0" -DPLUGIN_FTEXAMPLE:STRING="NO" -DPLUGIN_DAEMON_EXAMPLE:STRING="NO" -DPLUGIN_OQGRAPH:STRING="NO" -DPLUGIN_WSREP_INFO:STRING="NO" -DMRN_GROONGA_NORMALIZER_MYSQL_EMBED:BOOL="0" -DPLUGIN_AWS_KEY_MANAGEMENT:STRING="NO" -DCONNECT_WITH_LIBXML2:BOOL="0" -DPLUGIN_INNOBASE:STRING="NO" -DWITH_WSREP:BOOL="0" -DPLUGIN_BLACKHOLE:STRING="NO" -DPLUGIN_AUDIT_NULL:STRING="NO" -DPLUGIN_QUERY_CACHE_INFO:STRING="NO" -DPLUGIN_AUTH_GSSAPI:STRING="NO" -DPLUGIN_PARTITION:STRING="NO" -DPLUGIN_PERFSCHEMA:STRING="NO" -DPLUGIN_XTRADB:STRING="NO" -DPLUGIN_SEMISYNC_SLAVE:STRING="NO" -DPLUGIN_MROONGA:STRING="NO" -DPLUGIN_AUTH_SOCKET:STRING="NO" -DPLUGIN_AUTH_TEST_PLUGIN:STRING="NO" -DWITH_PIC:BOOL="1" -DPLUGIN_AUTH_GSSAPI_CLIENT:STRING="NO" -DPLUGIN_AUTH_PAM:STRING="NO" -DPLUGIN_FEDERATEDX:STRING="NO" -DPLUGIN_DIALOG_EXAMPLES:STRING="NO" -DCONNECT_WITH_JDBC:BOOL="0" -DPLUGIN_SPHINX:STRING="NO" -DPLUGIN_QA_AUTH_SERVER:STRING="NO" -DPLUGIN_SQL_ERRLOG:STRING="NO" -DPLUGIN_QA_AUTH_CLIENT:STRING="NO" -DUSE_ARIA_FOR_TMP_TABLES:BOOL="0" -DPLUGIN_DIALOG:STRING="NO" -DMRN_GROONGA_EMBED:BOOL="0" -DPLUGIN_QUERY_RESPONSE_TIME:STRING="NO" -DPLUGIN_CRACKLIB_PASSWORD_CHECK:STRING="NO" -DPLUGIN_FILE_KEY_MANAGEMENT:STRING="NO" -DPLUGIN_AUTH_0X0100:STRING="NO" -DPLUGIN_METADATA_LOCK_INFO:STRING="NO" -DPLUGIN_ARIA:STRING="NO" -DPLUGIN_ARCHIVE:STRING="NO" -DACLOCAL_EXECUTABLE:FILEPATH="ACLOCAL_EXECUTABLE-NOTFOUND" -DPLUGIN_HANDLERSOCKET:STRING="NO" -DPLUGIN_CONNECT:STRING="NO" -DPLUGIN_SEQUENCE:STRING="NO" -DCONNECT_WITH_ODBC:BOOL="0" -DPLUGIN_QA_AUTH_INTERFACE:STRING="NO" -DWITH_SYSTEMD:STRING="NO" -DPLUGIN_EXAMPLE_KEY_MANAGEMENT:STRING="NO" -DWITH_VALGRIND:BOOL="1" -DPLUGIN_TEST_SQL_DISCOVERY:STRING="NO" -DPLUGIN_FEEDBACK:STRING="NO" -DPLUGIN_MYSQL_CLEAR_PASSWORD:STRING="NO" -DPLUGIN_EXAMPLE:STRING="NO" -DPLUGIN_DEBUG_KEY_MANAGEMENT:STRING="NO" -DPLUGIN_SIMPLE_PASSWORD_CHECK:STRING="NO" -DPLUGIN_SPIDER:STRING="NO" -DPLUGIN_TOKUDB:STRING="NO" -DPLUGIN_SERVER_AUDIT:STRING="NO" ../
|